cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "src/batch",
    "src/batch/executors",
    "src/bench",
    "src/cmd",
    "src/cmd_all",
    "src/common",
    "src/common/common_service",
    "src/common/estimate_size",
    "src/common/fields-derive",
    "src/common/heap_profiling",
    "src/common/metrics",
    "src/common/telemetry_event",
    "src/compute",
    "src/connector",
    "src/connector/codec",
    "src/connector/with_options",
    "src/ctl",
    "src/dml",
    "src/error",
    "src/expr/core",
    "src/expr/impl",
    "src/expr/macro",
    "src/frontend",
    "src/frontend/macro",
    "src/frontend/planner_test",
    "src/java_binding",
    "src/jni_core",
    "src/license",
    "src/meta",
    "src/meta/dashboard",
    "src/meta/model",
    "src/meta/model/migration",
    "src/meta/node",
    "src/meta/service",
    "src/object_store",
    "src/prost",
    "src/prost/helpers",
    "src/risedevtool",
    "src/risedevtool/config",
    "src/rpc_client",
    "src/sqlparser",
    "src/storage",
    "src/storage/backup",
    "src/storage/compactor",
    "src/storage/hummock_sdk",
    "src/storage/hummock_test",
    "src/stream",
    "src/stream/spill_test",
    "src/test_runner",
    "src/tests/compaction_test",
    "src/tests/e2e_extended_mode",
    "src/tests/regress",
    "src/tests/simulation",
    "src/tests/sqlsmith",
    "src/tests/state_cleaning_test",
    "src/utils/delta_btree_map",
    "src/utils/futures_util",
    "src/utils/iter_util",
    "src/utils/local_stats_alloc",
    "src/utils/pgwire",
    "src/utils/resource_util",
    "src/utils/runtime",
    "src/utils/sync-point",
    "src/utils/variables",
    "src/utils/workspace-config",
    "src/workspace-hack",
]
exclude = [
    "e2e_test/source_inline/pubsub",
    "e2e_test/udf/embedded_wasm",
    "lints",
]
resolver = "2"

[workspace.package]
version = "2.5.0-alpha"
edition = "2024"
homepage = "https://github.com/risingwavelabs/risingwave"
keywords = ["sql", "database", "streaming"]
license = "Apache-2.0"
repository = "https://github.com/risingwavelabs/risingwave"

# some dependencies are not worth deleting.
[workspace.metadata.cargo-machete]
ignored = [
    "workspace-hack",
    "expect-test",
    "pretty_assertions",
    "serde",
    "serde_json",
    "linkme",
    "tempfile",
]
[workspace.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
development = ["expect-test", "pretty_assertions"]

[workspace.dependencies]
# Switch to a crate-io version after new foyer version is released.
# foyer = { version = "0.16.1", features = ["serde", "tracing", "nightly"] }
foyer = { git = "https://github.com/foyer-rs/foyer", rev = "f907ffb85d9b76d8a6d4c8dcc9fc9f1c18757601", features = [
    "serde",
    "tracing",
    "nightly",
] }
mixtrics = { version = "0.1", features = ["prometheus"] }
apache-avro = { git = "https://github.com/risingwavelabs/avro", rev = "25113ba88234a9ae23296e981d8302c290fdaa4b", features = [
    "snappy",
    "zstandard",
    "bzip",
    "xz",
] }
arc-swap = "1"
auto_enums = { version = "0.8", features = ["futures03", "tokio1"] }
await-tree = { version = "0.3.0-alpha.3", features = ["serde"] }
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "rustls",
] }
aws-credential-types = { version = "1", default-features = false, features = [
    "hardcoded-credentials",
] }
aws-sdk-glue = "1"
aws-sdk-kinesis = { version = "1", default-features = false, features = [
    "rt-tokio",
    "rustls",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "rt-tokio",
    "rustls",
] }
aws-sdk-sqs = { version = "1", default-features = false, features = [
    "rt-tokio",
    "rustls",
] }
aws-smithy-http = "0.60"
aws-smithy-runtime-api = "1"
aws-smithy-runtime = "1"
aws-smithy-types = { version = "1", default-features = false, features = [
    "hyper-0-14-x", # required by aws sdk
] }
aws-endpoint = "0.60"
aws-types = "1"
axum = "=0.7.4" # TODO: 0.7.5+ does not work with current toolchain
axum-extra = "0.9"
futures-async-stream = "0.2.9"
hytra = "0.1"
rdkafka = { package = "madsim-rdkafka", version = "0.4.3", features = [
    "cmake-build",
] }
hashbrown = { version = "0.15", features = [
    "default-hasher",
    "inline-more",
    "nightly",
] }
criterion = { version = "0.5", features = ["async_futures"] }
tonic = { package = "madsim-tonic", version = "0.5.1" }
tonic-build = { package = "madsim-tonic-build", version = "0.5" }
otlp-embedded = { git = "https://github.com/risingwavelabs/otlp-embedded", rev = "e6cd165b9bc85783b42c106e99186b86b73e3507" }
prost = { version = "0.13" }
prost-build = { version = "0.13" }
# branch dev_rebase_main_20250325
iceberg = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "9c210b9", features = [
    "storage-s3",
    "storage-gcs",
    "storage-azblob",
] }
iceberg-catalog-rest = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "9c210b9" }
iceberg-catalog-glue = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "9c210b9" }
opendal = "0.49"
arrow-udf-runtime = "0.7.0"
clap = { version = "4", features = ["cargo", "derive", "env"] }
# Use a forked version which removes the dependencies on dynamo db to reduce
# compile time and binary size.
deltalake = { version = "0.20.1", features = ["s3", "gcs", "datafusion"] }
itertools = "0.14.0"
jsonbb = "0.1.4"
linkme = { version = "0.3.32", features = ["used_linker"] }
lru = { git = "https://github.com/risingwavelabs/lru-rs.git", rev = "2682b85" }
parquet = { version = "54", features = ["async"] }
mysql_async = { version = "0.34", default-features = false, features = [
    "default",
] }
thiserror-ext = { version = "0.2.1", features = ["backtrace"] }
tikv-jemalloc-ctl = { git = "https://github.com/risingwavelabs/jemallocator.git", rev = "64a2d9" }
tikv-jemallocator = { git = "https://github.com/risingwavelabs/jemallocator.git", features = [
    "profiling",
    "stats",
], rev = "64a2d9" }
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", default-features = false }
opentelemetry-semantic-conventions = "0.16"
parking_lot = { version = "0.12", features = [
    "arc_lock",
    "deadlock_detection",
] }
pin-project-lite = "0.2"
sea-orm = { version = "~1.1", features = [
    "sqlx-all",
    "runtime-tokio-native-tls",
    "with-uuid",
] }
sea-orm-migration = "~1.1"
sqlx = { version = "0.8.2", default-features = false, features = [
    "bigdecimal",
    "chrono",
    "json",
    "mysql",
    "postgres",
    "runtime-tokio-native-tls",
    "rust_decimal",
    "sqlite",
    "time",
    "uuid",
] }
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "0dd1055", features = [
    "net",
    "fs",
] }
tokio-util = "0.7"
tracing-opentelemetry = "0.30"
rand = { version = "0.9", features = ["small_rng"] }
governor = { version = "0.8", default-features = false, features = ["std"] }
redis = { version = "0.28" }
risingwave_backup = { path = "./src/storage/backup" }
risingwave_batch = { path = "./src/batch" }
risingwave_batch_executors = { path = "./src/batch/executors" }
risingwave_cmd = { path = "./src/cmd" }
risingwave_common = { path = "./src/common" }
risingwave_common_service = { path = "./src/common/common_service" }
risingwave_common_estimate_size = { path = "./src/common/estimate_size" }
risingwave_common_heap_profiling = { path = "./src/common/heap_profiling" }
risingwave_common_metrics = { path = "./src/common/metrics" }
risingwave_common_proc_macro = { path = "./src/common/proc_macro" }
risingwave_common_rate_limit = { path = "./src/common/rate_limit" }
risingwave_compactor = { path = "./src/storage/compactor" }
risingwave_compute = { path = "./src/compute" }
risingwave_ctl = { path = "./src/ctl" }
risingwave_connector = { path = "./src/connector" }
risingwave_connector_codec = { path = "./src/connector/codec" }
risingwave_dml = { path = "./src/dml" }
risingwave_error = { path = "./src/error" }
risingwave_expr = { path = "./src/expr/core" }
risingwave_expr_impl = { path = "./src/expr/impl" }
risingwave_frontend = { path = "./src/frontend" }
risingwave_hummock_sdk = { path = "./src/storage/hummock_sdk" }
risingwave_hummock_test = { path = "./src/storage/hummock_test" }
risingwave_hummock_trace = { path = "./src/storage/hummock_trace" }
risingwave_license = { path = "./src/license" }
risingwave_mem_table_spill_test = { path = "./src/stream/spill_test" }
risingwave_meta = { path = "./src/meta" }
risingwave_meta_dashboard = { path = "./src/meta/dashboard" }
risingwave_meta_service = { path = "./src/meta/service" }
risingwave_meta_model = { path = "src/meta/model" }
risingwave_meta_model_migration = { path = "src/meta/model/migration" }
risingwave_meta_node = { path = "./src/meta/node" }
risingwave_object_store = { path = "./src/object_store" }
risingwave_pb = { path = "./src/prost" }
risingwave_rpc_client = { path = "./src/rpc_client" }
risingwave_rt = { path = "./src/utils/runtime" }
risingwave_sqlparser = { path = "./src/sqlparser" }
risingwave_sqlsmith = { path = "./src/tests/sqlsmith" }
risingwave_storage = { path = "./src/storage" }
risingwave_stream = { path = "./src/stream" }
risingwave_test_runner = { path = "./src/test_runner" }
risingwave_udf = { path = "./src/expr/udf" }
risingwave_variables = { path = "./src/utils/variables" }
risingwave_java_binding = { path = "./src/java_binding" }
risingwave_jni_core = { path = "src/jni_core" }
risingwave_telemetry_event = { path = "./src/common/telemetry_event" }
rw_futures_util = { path = "src/utils/futures_util" }
rw_resource_util = { path = "src/utils/resource_util" }
rw_iter_util = { path = "src/utils/iter_util" }

[workspace.lints.rust]
# `forbid` will also prevent the misuse of `#[allow(unused)]`
unused_must_use = "forbid"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
# Backward compatibility is not important for an application.
async_fn_in_trait = "allow"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(madsim)',
    'cfg(coverage)',
    'cfg(dashboard_built)',
] }

[workspace.lints.clippy]
uninlined_format_args = "allow"
dbg_macro = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
inconsistent_struct_constructor = "warn"
unused_async = "warn"
map_flatten = "warn"
await_holding_lock = "warn"
# For private code, this is a little pedantic and not worth fixing.
# &Vec or &String is acceptable
ptr_arg = "allow"
# a little pedantic
get_first = "allow"
new_without_default = "allow"
# TODO: remove later https://github.com/rust-lang/rust-clippy/issues/12537
# duplicated_attributes = "allow"
# TODO: remove later https://github.com/rust-lang/rust-clippy/issues/12436
mixed_attributes_style = "allow"
too_long_first_doc_paragraph = "allow"
str_to_string = "warn"
string_to_string = "warn"

# TODO: this makes sense, but it's too noisy for now (2025-03-10)
large_enum_variant = "allow"
# TODO: this makes sense, but it's too noisy for now (2025-03-10)
result_large_err = "allow"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"
# Explicit lints don't hurt, and sometimes rust-analyzer works better with explicit links.
redundant_explicit_links = "allow"

# Tweak built-in profiles and define custom profiles.
# See `docs/dev/src/build-and-run/profiles.md` for detailed information.
[profile.dev]
lto = "off"
# use parallel frontend to speed up build
# TODO: may consider applying to release/production profile as well
rustflags = ["-Z", "threads=8"]

[profile.release]
debug = "full"
incremental = true
split-debuginfo = "packed"
lto = "off"

# Patch profile for production clusters.
# It will trade-off lto for faster build time.
[profile.patch-production]
inherits = "production"
lto = "off"

[profile.production]
inherits = "release"
incremental = false
lto = "thin"

[profile.ci-release]
inherits = "release"
incremental = false
lto = "off"
debug = "line-tables-only"
split-debuginfo = "off"
debug-assertions = true
overflow-checks = true

[profile.ci-dev]
inherits = "dev"
incremental = false
debug = "line-tables-only"
[profile.ci-dev.package."*"] # external dependencies
opt-level = 1
[profile.ci-dev.package."tokio"]
opt-level = 3
[profile.ci-dev.package."await-tree"]
opt-level = 3
[profile.ci-dev.package."indextree"]
opt-level = 3

[profile.ci-sim]
inherits = "dev"
incremental = false
debug = "line-tables-only"
opt-level = 2

[patch.crates-io]
# Patch third-party crates for deterministic simulation.
getrandom = { git = "https://github.com/madsim-rs/getrandom.git", rev = "e79a7ae" }
# Don't patch `tokio-stream`, but only use the madsim version for **direct** dependencies.
# Imagine an unpatched dependency depends on the original `tokio` and the patched `tokio-stream`.
# tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "0dd1055" }
tokio-retry = { git = "https://github.com/madsim-rs/rust-tokio-retry.git", rev = "95e2fd3" }
tokio-postgres = { git = "https://github.com/madsim-rs/rust-postgres.git", rev = "ac00d88" }
# sqlx version: v0.8.2
# patch diffs: https://github.com/madsim-rs/sqlx/pull/4
sqlx = { git = "https://github.com/madsim-rs/sqlx.git", rev = "3efe6d0065963db2a2b7f30dee69f647e28dec81" }
# patch to remove preserve_order from serde_json
bson = { git = "https://github.com/risingwavelabs/bson-rust", tag = "v2.14.0-json-no-preserve_order" }

[workspace.metadata.dylint]
libraries = [{ path = "./lints" }]
