[package]
name = "lints"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "format_error"
path = "ui/format_error.rs"

# See `README.md` before bumping the version.
# Remember to update the version in `ci/Dockerfile` as well.
[dependencies]
clippy_utils = { git = "https://github.com/risingwavelabs/clippy", rev="ff5af2fc22b4bb813fc7af028f99f58ecea22cd4" }
dylint_linting = "=4.1.0"
itertools = "0.14"

[dev-dependencies]
dylint_testing = "=4.1.0"

# UI test dependencies
anyhow = "1"
thiserror = "2"
thiserror-ext = "0.2"
tracing = "0.1"

[package.metadata.rust-analyzer]
rustc_private = true
