[package]
name = "lints"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[lib]
crate-type = ["cdylib"]

# See `README.md` before bumping the version.
# Remember to update the version in `ci/Dockerfile` as well.
[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "9cadea6247dd" }
dylint_linting = "=6.0.1"
itertools = "0.14"

[dev-dependencies]

# UI test dependencies
anyhow = "1"
dylint_testing = "=6.0.1"
thiserror = "2"
thiserror-ext = "0.2"
tracing = "0.1"

[[example]]
name = "format_error"
path = "ui/format_error.rs"
