[workspace]
members = [
  "batch",
  "bench",
  "cmd",
  "common",
  "compute",
  "connector",
  "ctl",
  "frontend",
  "meta",
  "prost",
  "prost/helpers",
  "risedev",
  "rpc_client",
  "source",
  "sqlparser",
  "storage",
  "stream",
  "tests/regress",
  "utils/logging",
  "utils/memcomparable",
  "utils/pgwire",
]
