[workspace]
members = [
  "batch",
  "bench",
  "cmd",
  "common",
  "compute",
  "connector",
  "ctl",
  "frontend",
  "frontend/test_runner",
  "meta",
  "prost",
  "prost/helpers",
  "risedevtool",
  "rpc_client",
  "source",
  "sqlparser",
  "storage",
  "stream",
  "tests/regress",
  "utils/logging",
  "utils/memcomparable",
  "utils/pgwire",
  "utils/value-encoding",
  "workspace-hack",
]
