[package]
name = "simple_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
etcd-client = { version = "0.10.2", features = ["tls"] }
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
log = "0.4.17"


