[tool.poetry]
name = "iceberg-e2e-test"
version = "0.1.0"
description = "E2e test with iceberg"
authors = ["risingwavelabs"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = { version = "3.4.1", extras = ["sql", "connect"] }
tomli = "2.0"
setuptools = "78.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
