[package]
edition = "2021"
name = "risingwave_batch"
version = "0.1.3"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
byteorder = "1"
bytes = "1"
chrono = "0.4"
crc32fast = "1"
either = "1"
farmhash = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
itertools = "0.10"
lazy_static = "1"
log = "0.4"
memcomparable = { path = "../utils/memcomparable" }
num-traits = "0.2"
parking_lot = { version = "0.12", features = ["arc_lock"] }
paste = "1"
prost = "0.9"
rdkafka = { version = "0.28", features = ["cmake-build"] }
risingwave_common = { path = "../common" }
risingwave_pb = { path = "../prost" }
risingwave_rpc_client = { path = "../rpc_client" }
risingwave_source = { path = "../source" }
risingwave_storage = { path = "../storage" }
serde = { version = "1", features = ["derive"] }
serde-value = "0.7"
serde_json = "1"
smallvec = "1"
static_assertions = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tokio-stream = "0.1"
tonic = "0.6"
tracing = { version = "0.1" }
tracing-futures = "0.2"
twox-hash = "1"
url = "2"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
assert_matches = "1"
rand = "0.8"
tempfile = "3"
tokio-test = "0.4"
