[package]
name = "risingwave_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
clap = { version = "3", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
rand = "0.8"
risingwave-pb = { path = "../prost" }
risingwave_storage = { path = "../storage" } 
rusoto_core = "0.47"
rusoto_s3 = "0.47"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "sync", "macros", "time", "signal"] }

[[bin]]
name = "ss-bench"
path = "ss_bench/main.rs"
