[package]
name = "risingwave_common"
version = "0.1.0-SNAPSHOT"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
backtrace = "0.3"
byteorder = "1"
bytes = "1"
chrono = "0.4"
crc32fast = "1"
either = "1"
itertools = "0.10"
lazy_static = "1.4.0"
log = "0.4"
memcomparable = { path = "../utils/memcomparable" }
num-traits = "0.2"
paste = "1"
prost = "0.9"
prost-types = "0.9"
risingwave-pb = { path = "../prost" }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal"] }
tokio-stream = "0.1.7"
tonic = "0.6"
twox-hash = "1"

[dev-dependencies]
rand = "0.8"
