[package]
edition = "2021"
name = "risingwave_connector"
version = "0.1.2"

[dependencies]
anyhow = "1"
async-std = { version = "1" }
async-stream = "0.3"
async-trait = "0.1"
aws-config = "0.6"
aws-sdk-kinesis = "0.6"
aws-smithy-http = "0.36"
aws-smithy-types = "0.36"
aws-types = { version = "0.6", features = ["hardcoded-credentials"] }
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
crc32fast = "1"
either = "1"
farmhash = "1"
fasthash = "0.4.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
http = "0.2.6"
hyper = "0.14.16"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
memcomparable = { path = "../utils/memcomparable" }
num-traits = "0.2"
paste = "1"
prost = "0.9"
protobuf = "2"
pulsar = { git = "https://github.com/shanicky/pulsar-rs.git", rev = "3b6353943833057f4379a354c1754a4e86fa57ff" }
rdkafka = { version = "0.28", features = ["cmake-build"] }
risingwave-pb = { path = "../prost" }
risingwave_common = { path = "../common" }
risingwave_storage = { path = "../storage" }
roaring = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_with = "1"
smallvec = "1"
static_assertions = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal", "fs"] }
tokio-stream = "0.1"
tonic = "0.6"
twox-hash = "1"
url = "2"
urlencoding = "2.1.0"

[dev-dependencies]
assert_matches = "1"
httpmock = "0.6.5"
rand = "0.8"
tempfile = "3"
