[package]
name = "frontend"
version = "0.1.2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bit-set = "0.5"
byteorder = "1.4"
bytes = "1"
clap = { version = "3", features = ["derive"] }
downcast-rs = "1.2"
dyn-clone = "1.0.4"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
paste = "1"
pgwire = { path = "../utils/pgwire" }
risingwave-pb = { path = "../prost" }
risingwave_common = { path = "../common" }
risingwave_meta = { path = "../meta" }
risingwave_rpc_client = { path = "../rpc_client" }
risingwave_source = { path = "../source" }
risingwave_sqlparser = { path = "../sqlparser" }
smallvec = { version = "1.6.1", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal", "fs"] }
tonic = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
serial_test = "*"
tempfile = "3"
tokio-postgres = "0.7"
