[package]
name = "risingwave_meta"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-recursion = "0.2"
async-stream = "0.3"
async-trait = "0.1"
backtrace = "0.3"
bincode = "1.3.3"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
crc32fast = "1"
either = "1"
futures = "0.3"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
log4rs = "1"
num-integer = "0.1"
num-traits = "0.2"
paste = "1"
prost = "0.9"
risingwave-pb = { path = "../prost" }
risingwave_common = { path = "../common" }
risingwave_storage = { path = "../storage" }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde-value = "0.7"
serde_json = "1"
serde_with = "1"
sled = "0.34.7"
smallvec = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.6"
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"

[dev-dependencies]
assert_matches = "1"
rand = "0.8"

[[bin]]
name = "meta-node"
path = "src/bin/meta_node.rs"

[build-dependencies]
