[package]
name = "risingwave_meta"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1"
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.4"
bincode = "1.3.3"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
crc32fast = "1"
dashmap = "5"
either = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = "0.14"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
memcomparable = { path = "../utils/memcomparable" }
moka = { version = "0.7", features = ["future"] }
num-integer = "0.1"
num-traits = "0.2"
paste = "1"
prost = "0.9"
risingwave-pb = { path = "../prost" }
risingwave_common = { path = "../common" }
risingwave_rpc_client = { path = "../rpc_client" }
risingwave_storage = { path = "../storage" }
serde = { version = "1", features = ["derive"] }
serde-value = "0.7"
serde_derive = "1"
serde_json = "1"
serde_with = "1"
sled = "0.34.7"
smallvec = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.6"
tower = { version = "0.4", features = ["util", "load-shed"] }
tower-http = { version = "0.2", features = ["add-extension", "cors"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
assert_matches = "1"
rand = "0.8"
serial_test = "*"

[[bin]]
name = "meta-node"
path = "src/bin/meta_node.rs"

[build-dependencies]
