[package]
edition = "2021"
name = "riselab"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
indicatif = "0.16"
itertools = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tempfile = "3"
yaml-rust = "0.4"
