[package]
edition = "2021"
name = "riselab"
version = "0.1.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
console = "0.15"
dialoguer = "0.9"
enum-iterator = "0.7"
indicatif = "0.16"
isahc = "1"
itertools = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tempfile = "3"
yaml-rust = "0.4"
