[package]
name = "risingwave_rpc_client"
version = "0.1.3"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4"
risingwave_common = { path = "../common" }
risingwave_pb = { path = "../prost" }
paste = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tonic = "0.6"
tracing = { version = "0.1" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
